# esp32-door-lock

./: .gitignore  CMakeLists.txt  README.md  esp32-door-lock.yaml  sdkconfig.defaults  secrets.yaml.example
.gitea/workflows/: ci.yaml
components/airbnk/: __init__.py  airbnk_crypto.h  airbnk_gateway.cpp  airbnk_gateway.h
components/airbnk_gateway/: CMakeLists.txt  __init__.py  airbnk_crypto.h  airbnk_gateway.cpp  airbnk_gateway.h
components/airbnk_gateway/include/: airbnk_ble.h  airbnk_gateway.h  airbnk_mqtt.h  airbnk_utils.h
components/airbnk_gateway/src/: airbnk_ble.c  airbnk_gateway.c  airbnk_mqtt.c  airbnk_utils.c
custom_components/airbnk_ble/: CMakeLists.txt  __init__.py  airbnk_ble.cpp  airbnk_ble.h  airbnk_crypto.cpp  airbnk_crypto.h  airbnk_lock.cpp  airbnk_lock.h  airbnk_parser.cpp  airbnk_parser.h  component.yaml
custom_components/airbnk_ble/sensor/: airbnk_sensor.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
secrets/: secrets.yaml.example
